test/types/tuple/bradc/tupleOfStrings.good
tupleOfStrings.chpl:3: error: tuples do not support iteration
