test/types/tuple/bradc/tupleOfStrings.chpl
var A = ("brad", "steve", "marybeth", "david", "samuel");

for a in A {
  writeln("a is: ", a);
}
